tests/ui/target_modifiers/incompatible_mips_nan2008.error_generated.stderr
error: mixing `-Zmips-nan2008` will cause an ABI mismatch in crate `incompatible_mips_nan2008`
  --> $DIR/incompatible_mips_nan2008.rs:13:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Zmips-nan2008` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: unset `-Zmips-nan2008` in this crate is incompatible with `-Zmips-nan2008=` in dependency `mips_nan2008`
   = help: set `-Zmips-nan2008=` in this crate or unset `-Zmips-nan2008` in `mips_nan2008`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=mips-nan2008` to silence this error

error: aborting due to 1 previous error

